@@ -3,6 +3,8 @@ package es.thalesalv.chatrpg.application.service.usecases;
 import java.text.MessageFormat;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -69,14 +71,23 @@ public class DungeonMasterUseCase implements BotUseCase {
         LOGGER.debug("Entered message history handling for RPG");
         final ModelSettings modelSettings = eventData.getBotChannelDefinitions().getChannelConfig().getSettings().getModelSettings();
         final MessageChannelUnion channel = eventData.getChannel();
-        final SelfUser bot = eventData.getBot();
-        return channel.getHistory()
+        final Predicate<Message> skipFilter = skipFilter(eventData);
+
+        List<String> messages = channel.getHistory()
                 .retrievePast(modelSettings.getChatHistoryMemory()).complete()
                 .stream()
-                .filter(m -> !m.getContentRaw().trim().equals(bot.getAsMention().trim()))
+                .filter(skipFilter)
                 .map(m -> MessageFormat.format("{0} said: {1}",
                         m.getAuthor().getName(), m.getContentDisplay().trim()))
-                .sorted(Collections.reverseOrder())
-                .toList();
+                .collect(Collectors.toList());
+
+        Collections.reverse(messages);
+
+        return messages;
+    }
+
+    private Predicate<Message> skipFilter(final EventData eventData) {
+        final SelfUser bot = eventData.getBot();
+        return m -> !m.getContentRaw().trim().equals(bot.getAsMention().trim());
     }
 }
